* Applying slightly adopted patches by Adriaan de Groot <groot@kde.org>,   fixing bug #106274 * changed some code documetation

BUG: 106274


svn path=/trunk/KDE/kdepim/kmailcvt/; revision=427876